--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "lil-gui": "^0.19.1",
     "twgl.js": "^5.5.3",
     "typescript": "^4.9.5",
     "vite": "^4.5.0"
   },
   "dependencies": {
-    "@arcgis/core": "^4.28.10"
+    "@arcgis/core": "^4.28.10",
+    "gl-matrix": "^3.4.3"
   }
 }
