--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "lil-gui": "^0.19.1",
+    "papaparse": "^5.4.1",
     "tslib": "^2.6.2",
     "twgl.js": "^5.5.3",
     "typescript": "^4.9.5",
