--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
+    "@types/three": "^0.161.2",
     "lil-gui": "^0.19.1",
     "papaparse": "^5.4.1",
     "tslib": "^2.6.2",
